--- a/department-service/src/main/resources/application.yml
+++ b/department-service/src/main/resources/application.yml
@@ -1,13 +1,7 @@
-spring:
-  application:
-    name: department-service
-
+spring.application.name: department-service
 server:
   port: 8082
-
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
-    register-with-eureka: true
-    fetch-registry: true
