--- a/eurekha-server/src/main/resources/application.yml
+++ b/eurekha-server/src/main/resources/application.yml
@@ -1,11 +1,10 @@
+spring.application.name=eurekha-server
 server:
   port: 8761
-
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-
   instance:
     hostname: localhost
     prefer-ip-address: false
